<resources>
    <string name="app_name">Teleport</string>
    <string name="remember_password">Remember Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="nik">NIK</string>
    <string name="lama_bekerja">Lama Bekerja</string>
    <string name="posisi">posisi</string>
    <string name="jurusan">Jurusan</string>
    <string name="antareza_ghifary">Antareza Ghifary</string>
    <string name="_10_tahun_12_bulan_27_hari">10 tahun 12 bulan 27 hari</string>
    <string name="developer_analyst">Developer Analyst</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="s1_on_going">S1 (On Going)</string>
    <string name="daftar_karyawan_n_pmo">Daftar Karyawan</string>
    <string name="sistem_informasi">Sistem Informasi</string>
    <string name="menu_aplikasi">Trello Port</string>
    <string name="divisi">Divisi</string>
    <string name="pmo">PMO</string>
    <string name="daftar_karyawan_n_resign">Daftar Karyawan \n Resign</string>
    <string name="list_karyawan">List Karyawan</string>
    <string name="menu">Menu</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="fullname">Fullname</string>
    <string name="marital">Marital</string>
    <string name="identitas">Identitas</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="status_karyawan">Status Karyawan</string>
    <string name="phone">Phone</string>
    <string name="alamat">Alamat</string>
    <string name="resource">Resource</string>
    <string name="site">Site</string>
    <string name="telegram">Telegram</string>
    <string name="institusi">Institusi</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="status">Status</string>
    <string name="nik_karyawan">Nik Karyawan</string>
    <string name="trelloid">Trelloid</string>
    <string name="lama_kerja">Lama Kerja</string>
    <string name="daftarkan_karyawan">Daftarkan Karyawan</string>
    <string name="karyawan_cuti">Karyawan Cuti</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="keterangan">Keterangan</string>
    <string name="submit">Submit</string>
    <string name="tambah_karyawan_mutasi">Tambah Karyawan Mutasi</string>

    <string name="selected_item">Selected item:</string>
    <string name="mutasi_ke_divisi">Mutasi ke Divisi</string>
    <string name="tambah_challenge_karyawan">Tambah Challenge Karyawan</string>
    <string name="challenge_sebagai">Challenge Sebagai</string>
    <string name="challenge_dimulai">Challenge Dimulai</string>
    <string name="challenge_berakhir">Challenge Berakhir</string>
    <string name="user_id">User Id</string>
    <string name="tanggal_cuti">Tanggal Cuti</string>
    <string name="tambah_karyawan_cuti">Tambah Karyawan Cuti</string>
    <string name="nama_proyek">Nama Proyek</string>
    <string name="pos">POS</string>
    <string name="aktifitas_terakhir">Aktifikas Terakhir</string>
    <string name="aktivitas_by_date">Aktivitas By Date</string>
    <string name="cari_aktifitas">Cari Aktifitas</string>
    <string name="tanggal_mulai">Tanggal Mulai</string>
    <string name="tanggal_selesai">Tanggal Selesai</string>
    <string name="nama_project">Nama Project</string>
    <string name="type">Type</string>
    <string name="tanggal">Tanggal</string>
    <string name="url">url</string>
    <string name="penempatan">penempatan</string>
    <string name="user_role">User Role</string>
    <string name="last_activity">Last Activity</string>
    <string name="username">Username</string>
    <string name="karyawan_idle">Karyawan Idle</string>
    <string name="daftar_proyek">Daftar Proyek</string>

    <string-array name="divisi_or_resource">
        <item>PMO</item>
        <item>BSO</item>
        <item>SDO</item>
        <item>RMO</item>
        <item>DSO</item>
        <item>KMO</item>
        <item>DO</item>
    </string-array>

    <string-array name="jenis_identitas">
        <item>KTP</item>
        <item>SIM</item>
    </string-array>


    <string-array name="status_pernikahan">
        <item>Lajang</item>
        <item>Menikah</item>
        <item>Janda</item>
        <item>Duda</item>
    </string-array>

    <string-array name="pendidikan_akhir">
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>

    <string-array name="status_karyawan">
        <item>Permanent</item>
        <item>Fixed-term contracts</item>
        <item>Freelance</item>
    </string-array>

    <string-array name="penempatan_kerja">
        <item>Jakarta</item>
        <item>Yogyakarta</item>
    </string-array>

    <string-array name="posisi">
        <item>Developer</item>
        <item>Developer Analyst</item>
        <item>System Analyst</item>
        <item>Project Manager</item>
        <item>Project Admin</item>
        <item>Quality Control</item>
        <item>Technical Writer</item>
        <item>Data Scientist</item>
        <item>Support Surveillance</item>
        <item>Support Leader</item>
        <item>Support Specialist</item>
        <item>Subject Matter Expert</item>
        <item>UI / UX</item>
        <item>System Architect</item>
        <item>Digital Solutions Senior Officer</item>
    </string-array>

    <string-array name="user_role">
        <item>HRD</item>
        <item>PMO Admin</item>
        <item>PMO Employee</item>
        <item>BSO Admin</item>
        <item>BSO Employee</item>
        <item>SDO Admin</item>
        <item>SDO Employee</item>
        <item>RMO Admin</item>
        <item>RMO Employee</item>
        <item>Trello Admin</item>
        <item>Project Manager</item>
        <item>System Analyst</item>
    </string-array>


</resources>