<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:backgroundTint="@color/white"
    android:elevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama_karyawan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvNamaKaryawan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/antareza_ghifary"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keterangan" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvKeterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="sakit"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>